argo-rollout-canary/traffic-management/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-traffic-management
spec:
  replicas: 5
  strategy:
    canary:
      # dynamicStableScale: true
      # abortScaleDownDelaySeconds: 20
      canaryService: canary-service
      stableService: stable-service
      trafficRouting:
        nginx:
          stableIngress: rollouts-traffic-management
      steps:
        - setWeight: 20 # Using Setweight Only
        - pause: {}
      # ....................
      # - setCanaryScale: # Using SetCanaryScale with SetWeight
      #    weight: 40
      # - setWeight: 40
      # - pause: {}
  selector:
    matchLabels:
      app: rollouts-traffic-management
  template:
    metadata:
      labels:
        app: rollouts-traffic-management
    spec:
      containers:
        - name: rollouts-traffic-management
          image: canary # This is the same image that we built in the previous session (v12-argo-rollouts-blue-green) , I just re-tagged it
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: canary-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: rollouts-traffic-management
---
apiVersion: v1
kind: Service
metadata:
  name: stable-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: rollouts-traffic-management
